--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development nodemon --exec babel-node src/server.js",
-    "prod": "NODE_ENV=production nodemon --exec babel-node src/server.js"
+    "production": "NODE_ENV=production babel-node src/server.js"
   },
   "keywords": [],
   "author": "",
