--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DB_PASS=
 DB_DIALECT=mysql
 
 MONGODB_ENABLED=true
-MONGODB_URI=mongodb://yuyuid:Pangeran123@13.215.116.154:27017?retryWrites=true&w=majority
+MONGODB_URI=
 MONGODB_NAME=skripsi
 
 REDIS_HOST=localhost
